--- a/WebServiceInterface/WebServiceInterface/WebServiceInterface.csproj
+++ b/WebServiceInterface/WebServiceInterface/WebServiceInterface.csproj
@@ -50,7 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\WSDLNodeNotFoundException.cs" />
     <Compile Include="Extension Methods\ControlCollectionExtensions.cs" />
+    <Compile Include="Extension Methods\XmlNodeExtensions.cs" />
     <Compile Include="Library\LibraryManager.cs" />
     <Compile Include="Library\Parameter.cs" />
     <Compile Include="Library\Method.cs" />
