Finish up documentation

--- a/WebServiceInterface/WebServiceInterface/WebServiceInterface.csproj
+++ b/WebServiceInterface/WebServiceInterface/WebServiceInterface.csproj
@@ -54,17 +54,17 @@
     <Compile Include="Exceptions\WSDLNodeNotFoundException.cs" />
     <Compile Include="Extension Methods\ControlCollectionExtensions.cs" />
     <Compile Include="Extension Methods\XmlNodeExtensions.cs" />
+    <Compile Include="Library\LibraryManagerElements\Method.cs" />
+    <Compile Include="Library\LibraryManagerElements\Parameter.cs" />
+    <Compile Include="Library\LibraryManagerElements\WebService.cs" />
+    <Compile Include="Library\Parameter Management\ParameterManager.cs" />
+    <Compile Include="Library\Parameter Management\SOAPArgument.cs" />
     <Compile Include="Library\WSDL\WSDLHelpers.cs" />
     <Compile Include="Library\LibraryManager.cs" />
-    <Compile Include="Library\Parameter.cs" />
-    <Compile Include="Library\Method.cs" />
-    <Compile Include="Library\ParameterManager.cs" />
-    <Compile Include="Library\SOAPArgument.cs" />
     <Compile Include="Library\SOAPWebService.cs" />
-    <Compile Include="Library\WebService.cs" />
-    <Compile Include="Library\WSDLParser.cs" />
     <Compile Include="Library\WSDL\WSDLInformation.cs" />
     <Compile Include="Library\WSDL\WSDLOperation.cs" />
+    <Compile Include="Library\WSDL\WSDLParser.cs" />
     <Compile Include="Library\WSDL\WSDLPort.cs" />
     <Compile Include="Library\WSDL\WSDLService.cs" />
     <Compile Include="Library\WSDL\WSDLType.cs" />
